--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,11 +28,12 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.47.3", default-features = false }
 esp-idf-hal = { version = "0.42.5" , default-features = false}
+esp-idf-sys = { version = "0.33.7" , default-features = false}
 anyhow = "1.0.75"
 ssd1306 = "0.8.4"
 embedded-graphics = "0.8.1"
 
 [build-dependencies]
-embuild = "0.31.3"
+embuild = "0.31.4"
 vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
-bindgen = "0.65.1"
+bindgen = "0.69.1"
